zoom prevention on mobile browser

--- a/src/components/Synth/Synth.css
+++ b/src/components/Synth/Synth.css
@@ -1,3 +1,8 @@
+html {
+	-webkit-text-size-adjust: none;
+	touch-action: manipulation;
+}
+
 * {
   background-color: #001eff;
   font-family: 'Press Start 2P', cursive;
